[tool.poetry]
name = "nectl"
version = "0.5.0"
description = "Network Control Tool"
authors = ["Adam Kirchberger <adamkirchberger@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
coloredlogs = "^15.0.1"
pydantic = "^1.8.2"
PyYAML = "^5.4.1"
ipaddress = "^1.0.23"
lxml = "^4.6.3"
tabulate = "^0.8.9"
dpath = "^2.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = {version = "^21.8b0", allow-prereleases = true}
pylint = "^2.10.2"
mypy = "^0.910"
flake8 = "^3.9.2"
types-setuptools = "^57.0.2"
types-PyYAML = "^5.4.10"
types-tabulate = "^0.8.2"
pytest-forked = "^1.3.0"
lxml-stubs = "^0.2.0"
pytest-cov = "^2.12.1"
pytest-click = "^1.0.2"
pytest-env = "^0.6.2"

[tool.poetry.scripts]
nectl = "nectl.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
